--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,26 @@
  *= require_tree .
  *= require_self
  */
-body { padding-top: 100px; }
+body { padding-top: 60px; }
 footer { margin-top: 100px; }
 table, td, th { vertical-align: middle; border: none; }
 th { border-bottom: 1px solid #DDD; }
+.navbar {
+  min-height: 38px;
+  background-color: #ffb3a7 !important;
+  background-image: none !important;
+ 
+}
+.navbar a.brand { font-size: 18px; }
+.navbar a.brand:hover {
+  color: #fff;
+  background-color: transparent;
+  text-decoration: none;
+}
+.nav img{
+  max-height: 40px;
+}
+footer {
+  background-color: #ebebeb;
+  padding: 30px 0;
+}
